src/tests/boolean_infix_expression/snapshots/monkey_interpreter__tests__boolean_infix_expression__test_boolean_infix_expression_case_2_environment.snap
---
source: src/tests/boolean_infix_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {},
        sub_environment: None,
    },
}
