src/tests/boolean_infix_expression/snapshots/monkey_interpreter__tests__boolean_infix_expression__test_boolean_infix_expression_case_4_lexical_analysis.snap
---
source: src/tests/boolean_infix_expression/mod.rs
assertion_line: 20
expression: tokens
---
[
    PositionedToken {
        token: False,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Equals,
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: True,
        position: Position {
            line: 1,
            column: 10,
        },
    },
]
