src/tests/boolean_infix_expression/snapshots/monkey_interpreter__tests__boolean_infix_expression__test_boolean_infix_expression_case_5_lexical_analysis.snap
---
source: src/tests/boolean_infix_expression/mod.rs
assertion_line: 20
expression: tokens
---
[
    PositionedToken {
        token: True,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: NotEquals,
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: False,
        position: Position {
            line: 1,
            column: 9,
        },
    },
]
